tests/negative/Internal/NoInstance.juvix
module NoInstance;

type Unit := unit;

type Box A := box A;

trait
type T A := mkT { pp : A → A };

main : Box Unit := T.pp (box unit);
